--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/nelrnd/blog-api#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
