--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
